vm/snapshots/variables-array_components-regular-arraycopy-ArraycopyOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Arraycopy test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Arraycopy test passed.
----- STDERR -----
