vm/snapshots/variables-array_components-regular-boolean_array-BooleanArrayOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Boolean array test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Boolean array test passed.
----- STDERR -----
