vm/snapshots/variables-array_components-regular-compound_assign-CompoundAssignOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Compound assignment test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Compound assignment test passed.
----- STDERR -----
