vm/snapshots/variables-array_components-regular-defaults-DefaultsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Defaults test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Defaults test passed.
----- STDERR -----
