vm/snapshots/variables-array_components-regular-inc_dec-IncDecOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Inc/dec test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Inc/dec test passed.
----- STDERR -----
